--- a/ex6/src/main/resources/templates/movie/read.html
+++ b/ex6/src/main/resources/templates/movie/read.html
@@ -90,171 +90,184 @@
           </div>
         </div>
       </div>
-    </div>
-    <script th:inline="javascript">
-      // document의 태그를 모두 읽고 난뒤 실행되는 함수
-      /*
-      window.onload = function(){
-        var mno = [[${movieDTO.mno}]]
-        loadReviewJSON();
-        var myModal = new bootstrap.Modal(document.querySelector('#myModal'),
-                          { backdrop: true });
-        function loadReviewJSON() {
-          const url = /*[[@{/reviews/movie/}]]*/'url'
-          const listGroup = document.querySelector(".reviewList")
-          fetch(url+mno, {method: 'GET',})
-          .then(response => response.json())
-          .then(data => {
-            // console.log(data)
-            let str = "";
-            for(let i=0;i<data.length;i++) {
-              str = str + `<div class="card-body form-control mb-1"
-              onmouseover="this.style.background='#d6e6ff'"
-              onmouseout="this.style.background='white'"
-              data-rno="${data[i].rno}" data-text="${data[i].text}"
-              data-reviewer="${data[i].reviewer}"
-              style="padding: 5px 20px;cursor:pointer;">
-                <div style="display:inline-block;width:49%;">
-                  <h6 style="display:inline-block;width:70px">${data[i].rno}</h6>
-                  <h5 class="card-text" style="display:inline-block;">${data[i].text}</h5>
-                </div>
-                <div style="display:inline-block;width:48%;text-align: right;right-padding:20px;">
-                  <span class="card-subtitle text-muted">${data[i].reviewer}</span>
-                  <span class="card-subtitle text-muted"
-                  style="display:inline-block;width:150px;color:rgb(148 163 184);"
-                  >${formatDateTime(data[i].regDate)}</span>
-                </div>
-              </div>`
-            }
-            listGroup.innerHTML = str
-            const cardBody = document.querySelectorAll(".card-body")
-            for(let i=0;i<cardBody.length;i++) {
-              cardBody[i].onclick = function() {
-                let rno = cardBody[i].dataset.rno;
-                let text = cardBody[i].dataset.text;
-                let reviewer = cardBody[i].dataset.reviewer;
-                document.querySelector('#exampleModalLabel').textContent = rno+'번 댓글'
-                document.querySelector(".modal-body").innerHTML =
-                  `<input type="hidden" name="rno" value="${rno}" readonly>
-                   <input type="text" class="form-control" name="text" value="${text}">
-                   <input type="text" class="form-control" name="reviewer" value='${reviewer}'>
-                  `
-                document.querySelector(".modal-footer").innerHTML =
-                  `<button type="button" class="btn btn-danger remove">댓글 삭제</button>
-                   <button type="button" class="btn btn-warning modify">댓글 수정</button>
-                   <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
-                  `
-                document.querySelector(".modal-footer .modify").onclick = function () {
-                  let rno = document.querySelector("input[name='rno']")
-                  let text = document.querySelector("input[name='text']")
-                  let reviewer = document.querySelector("input[name='reviewer']")
-
-                  if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
-                  if(!reviewer.value) {reviewer.setAttribute('placeholder', '작성자입력하세요');return;}
-                  let review = {rno: rno.value,mno: mno,text: text.value,reviewer: reviewer.value}
-                  const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url, {
-                    method: 'PUT',
-                    headers: {'Content-type': 'application/json'},
-                    body: JSON.stringify(review)
-                  })
-                  .then(res => res.json())
-                  .then(function(data){
-                    document.querySelector("#exampleModalLabel").innerHTML=`수정 알림`
-                    document.querySelector(".modal-body").innerHTML=`${data}번 댓글 수정 완료.`
-                    document.querySelector(".modal-footer .modify").style.display = 'none'
-                    document.querySelector(".modal-footer .remove").style.display = 'none'
-                    loadReviewJSON()
-                  })
-                  .catch(err => console.log('myError', err))
-                }
-                document.querySelector(".modal-footer .remove").onclick = function () {
-                  let rno = document.querySelector("input[name='rno']")
-                  const url = /*[[@{/reviews/}]]*/'url';
-                  fetch(url + rno.value, {
-                    method: 'DELETE',
-                    headers: {'Content-type': 'application/json'},
-                  })
-                  .then(res => res.json())
-                  .then(async function(data){
-                    document.querySelector("#exampleModalLabel").innerHTML=`삭제 알림`
-                    document.querySelector(".modal-body").innerHTML=`${data}번 댓글 삭제 완료.`
-                    document.querySelector(".modal-footer .modify").style.display = 'none'
-                    document.querySelector(".modal-footer .remove").style.display = 'none'
-                    document.querySelector("#repCnt").textContent =
-                      parseInt(document.querySelector("#repCnt").textContent) - 1
-                    loadReviewJSON()
-                  })
-                  .catch(err => console.log('myError', err))
-                }
-                myModal.show()
+      <script th:inline="javascript">
+        // document의 태그를 모두 읽고 난뒤 실행되는 함수
+        window.onload = function(){
+          var mno = [[${movieDTO.mno}]]
+          loadReviewJSON();
+          var myModal = new bootstrap.Modal(document.querySelector('#myModal'),
+                            { backdrop: true });
+          function loadReviewJSON() {
+            const url = /*[[@{/reviews/}]]*/'url'
+            const listGroup = document.querySelector(".reviewList")
+            fetch(url+mno+"/all", {method: 'GET',})
+            .then(response => response.json())
+            .then(data => {
+              // console.log(data)
+              let str = "";
+              for(let i=0;i<data.length;i++) {
+                str = str + `<div class="card-body form-control mb-1"
+                onmouseover="this.style.background='#d6e6ff'"
+                onmouseout="this.style.background='white'"
+                data-mid="${data[i].mid}"
+                data-text="${data[i].text}"
+                data-grade="${data[i].grade}"
+                data-nickname="${data[i].nickname}"
+                data-email="${data[i].email}"
+                data-reviewnum="${data[i].reviewnum}"
+                style="padding: 5px 20px;cursor:pointer;">
+                  <div style="display:inline-block;width:49%;">
+                    <h6 style="display:inline-block;width:70px">${data[i].reviewnum}</h6>
+                    <h5 class="card-text" style="display:inline-block;">${data[i].text}</h5>
+                  </div>
+                  <div style="display:inline-block;width:48%;text-align: right;right-padding:20px;">
+                    <span class="card-subtitle text-muted">${data[i].nickname} / ${data[i].email}</span>
+                    <span class="card-subtitle text-muted"
+                    style="display:inline-block;width:150px;color:rgb(148 163 184);"
+                    >${formatDateTime(data[i].regDate)}</span>
+                  </div>
+                </div>`
               }
-            }
-          });
-        }
-        function formatDateTime(str) {
-          const date = new Date(str)
-          return `${date.getFullYear()}/${len2(date.getMonth()+1)}`
-             + `/${len2(date.getDate())} ${len2(date.getHours())}:`
-             + `${len2(date.getMinutes())}`
-        }
-        function len2(num) {
-          return (num<10) ? "0"+num : num;
-        }
-        document.querySelector('.addReview').onclick = function() {
-          document.querySelector('#exampleModalLabel').textContent = '댓글 추가'
-          document.querySelector(".modal-body").innerHTML =
-            `
-            <input type="text" class="form-control" name="text" placeholder="Review...">
-            <input type="text" class="form-control" name="reviewer" value='user50@a.a'>
-            `
-          document.querySelector(".modal-footer").innerHTML =
-            `
-              <button type="button" class="btn btn-primary save">댓글 등록</button>
-              <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
-            `
-          document.querySelector(".modal-footer .save").onclick = function () {
-            let text = document.querySelector("input[name='text']")
-            let reviewer = document.querySelector("input[name='reviewer']")
+              listGroup.innerHTML = str
+              const cardBody = document.querySelectorAll(".card-body")
+              for(let i=0;i<cardBody.length;i++) {
+                cardBody[i].onclick = function() {
+                  let reviewnum = cardBody[i].dataset.reviewnum;
+                  let text = cardBody[i].dataset.text;
+                  let mid = cardBody[i].dataset.mid;
+                  let grade = cardBody[i].dataset.grade;
+                  let nickname = cardBody[i].dataset.nickname;
+                  document.querySelector('#exampleModalLabel').textContent ='No. '+reviewnum;
+                  document.querySelector(".modal-body").innerHTML =
+                    `<input type="hidden" name="reviewnum" value="${reviewnum}" readonly>
+                     <input type="hidden" class="form-control" name="mid" value="${mid}"readonly>
+                     <input type="text" class="form-control" name="text" value="${text}"readonly>
+                     <label>Grade</label>
+                     <span class="star">★★★★★<span>★★★★★</span>
+                     <input type="range" oninput = "drawStar(this)" value="1" step="2" min ="0" max="10">
+                     </span>
+                     <br>
+                     <input type="text" class="form-control" name="text" value="${text}">
+                    `
+                  document.querySelector(".modal-footer").innerHTML =
+                    `<button type="button" class="btn btn-danger remove">리뷰 삭제</button>
+                     <button type="button" class="btn btn-warning modify">리뷰 수정</button>
+                     <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
+                    `
+                  document.querySelector(".modal-footer .modify").onclick = function () {
+                    let reviewnum = document.querySelector("input[name='reviewnum']")
+                    let text = document.querySelector("input[name='text']")
+                    let grade = parseFloat(document.querySelector(".star span").style.width)*0.01*5;
 
-            if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
-            if(!reviewer.value) {reviewer.setAttribute('placeholder', '작성자입력하세요');return;}
-            let review = {mno: mno, text: text.value, reviewer: reviewer.value}
-            const url = /*[[@{/reviews/}]]*/'url';
-            fetch(url, {
-              method: 'POST',
-              headers: {'Content-type': 'application/json'},
-              body: JSON.stringify(review)
-            })
-            .then(res => res.json())
-            .then(function(data){
-              document.querySelector(".modal-body").innerHTML=`${data}번 댓글 등록 완료.`
-              document.querySelector("#exampleModalLabel").innerHTML=`등록 알림`
-              document.querySelector(".modal-footer .save").style.display = 'none'
-              document.querySelector("#repCnt").textContent =
-                parseInt(document.querySelector("#repCnt").textContent) + 1
-              loadReviewJSON()
-            })
+                    if(!text.value) {text.setAttribute('placeholder', '리뷰를 입력하세요');return;}
+                    if(!reviewer.value) {reviewer.setAttribute('placeholder', '작성자입력하세요');return;}
+                    let review = {rno: rno.value,mno: mno,text: text.value,reviewer: reviewer.value}
+                    const url = /*[[@{/reviews/}]]*/'url';
+                    fetch(url, {
+                      method: 'PUT',
+                      headers: {'Content-type': 'application/json'},
+                      body: JSON.stringify(review)
+                    })
+                    .then(res => res.json())
+                    .then(function(data){
+                      document.querySelector("#exampleModalLabel").innerHTML=`수정 알림`
+                      document.querySelector(".modal-body").innerHTML=`${data}번 댓글 수정 완료.`
+                      document.querySelector(".modal-footer .modify").style.display = 'none'
+                      document.querySelector(".modal-footer .remove").style.display = 'none'
+                      loadReviewJSON()
+                    })
+                    .catch(err => console.log('myError', err))
+                  }
+                  document.querySelector(".modal-footer .remove").onclick = function () {
+                    let rno = document.querySelector("input[name='rno']")
+                    const url = /*[[@{/reviews/}]]*/'url';
+                    fetch(url + rno.value, {
+                      method: 'DELETE',
+                      headers: {'Content-type': 'application/json'},
+                    })
+                    .then(res => res.json())
+                    .then(async function(data){
+                      document.querySelector("#exampleModalLabel").innerHTML=`삭제 알림`
+                      document.querySelector(".modal-body").innerHTML=`${data}번 댓글 삭제 완료.`
+                      document.querySelector(".modal-footer .modify").style.display = 'none'
+                      document.querySelector(".modal-footer .remove").style.display = 'none'
+                      document.querySelector("#repCnt").textContent =
+                        parseInt(document.querySelector("#repCnt").textContent) - 1
+                      loadReviewJSON()
+                    })
+                    .catch(err => console.log('myError', err))
+                  }
+                  myModal.show()
+                }
+              }
+            });
           }
-          myModal.show()
+          function formatDateTime(str) {
+            const date = new Date(str)
+            return `${date.getFullYear()}/${len2(date.getMonth()+1)}`
+               + `/${len2(date.getDate())} ${len2(date.getHours())}:`
+               + `${len2(date.getMinutes())}`
+          }
+          function len2(num) {
+            return (num<10) ? "0"+num : num;
+          }
+          document.querySelector('.addReview').onclick = function() {
+            document.querySelector('#exampleModalLabel').textContent = '리뷰 추가'
+            document.querySelector(".modal-body").innerHTML =
+              `
+              <input type="text" class="form-control" name="mid" placeholder="Member ID(mid)">
+               <label>Grade</label>
+                     <span class="star">★★★★★<span>★★★★★</span>
+                     <input type="range" oninput = "drawStar(this)" value="1" step="2" min ="0" max="10">
+                     </span>
+                     <br>
+              <label>Grade</label><span class="star">
+              <input type="text" class="form-control" name="text" placeholder="Review...">
+              <input type="text" class="form-control" name="reviewer" value='user50@a.a'>
+              `
+            document.querySelector(".modal-footer").innerHTML =
+              `
+                <button type="button" class="btn btn-primary save">댓글 등록</button>
+                <span class="btn btn-secondary" data-bs-dismiss="modal">Close</span>
+              `
+            document.querySelector(".modal-footer .save").onclick = function () {
+              let text = document.querySelector("input[name='text']")
+              let reviewer = document.querySelector("input[name='reviewer']")
+
+              if(!text.value) {text.setAttribute('placeholder', '댓글입력하세요');return;}
+              if(!reviewer.value) {reviewer.setAttribute('placeholder', '작성자입력하세요');return;}
+              let review = {mno: mno, text: text.value, reviewer: reviewer.value}
+              const url = /*[[@{/reviews/}]]*/'url';
+              fetch(url, {
+                method: 'POST',
+                headers: {'Content-type': 'application/json'},
+                body: JSON.stringify(review)
+              })
+              .then(res => res.json())
+              .then(function(data){
+                document.querySelector(".modal-body").innerHTML=`${data}번 리뷰 등록 완료.`
+                document.querySelector("#exampleModalLabel").innerHTML=`등록 알림`
+                document.querySelector(".modal-footer .save").style.display = 'none'
+                document.querySelector("#repCnt").textContent =
+                  parseInt(document.querySelector("#repCnt").textContent) + 1
+                loadReviewJSON()
+              })
+            }
+            myModal.show()
+          }
+          var msg = [[${msg}]]
+          // 일회성 msg의 내용이 비거나 history 상태가 비지 않는 경우 return
+          if(msg === '' || history.state) return
+          // history 이용해서 모달창 보여준거에 대한 기록을 clear!
+          history.replaceState({}, null, null) //(state, unused, url)
+          if(msg) {  // truthy 데이터가 올 경우만 if문 실행
+            document.querySelector(".modal-body").innerHTML
+              = `<p>${msg}되었습니다.</p>`
+            myModal.show()
+          }
         }
-
-
-        var msg = [[${msg}]]
-
-        // 일회성 msg의 내용이 비거나 history 상태가 비지 않는 경우 return
-        if(msg === '' || history.state) return
-        // history 이용해서 모달창 보여준거에 대한 기록을 clear!
-        history.replaceState({}, null, null) //(state, unused, url)
-
-        if(msg) {  // truthy 데이터가 올 경우만 if문 실행
-          document.querySelector(".modal-body").innerHTML
-            = `<p>${msg}되었습니다.</p>`
-          myModal.show()
-        }
-      }
-      */
-    </script>
+      </script>
+    </div>
   </th:block>
 
 </th:block>
