--- a/ex3/src/main/resources/templates/sample/ex2.html
+++ b/ex3/src/main/resources/templates/sample/ex2.html
@@ -11,7 +11,7 @@
 <h1>ex2</h1>
 <ul style="list-style: none;">
   <!--/* <li th:each="dto, state : ${list}" th:if="${dto.sno % 5 == 0}">
-    &lt;!&ndash;반복문에는 부가적으로 사용할 수 있는 state라는 객체가 있다.&ndash;&gt;
+    <p>반복문에는 부가적으로 사용할 수 있는 state라는 객체가 있다.</>p>
     [[${state.index}  + 1]] : [[${dto}]]
   </li> */-->
   <!--/* <li th:each="dto, state : ${list}">
