--- a/ex3/src/main/resources/templates/sample/exLayout2.html
+++ b/ex3/src/main/resources/templates/sample/exLayout2.html
@@ -1,15 +1,17 @@
-<!--src/main/resources/templates/sample/exLayout2.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{/fragments/fragment3 :: target(~{this:: #ulFirst},~{this :: #ulSecond})}"></th:block>
-<ul id ="ulFirst">
-  <li>AAA</li>
-  <li>BBB</li>
-  <li>CCC</li>
-</ul>
-<ul id ="ulSecond">
-  <li>111</li>
-  <li>222</li>
-  <li>333</li>
-</ul>
+<th:block
+    th:replace="~{/fragments/fragment3::target(~{this::#ulFirst},~{this::#ulSecond})}">
+  <ul id="ulFirst">
+    <li>AAA</li>
+    <li>BBB</li>
+    <li>CCC</li>
+  </ul>
+  <ul id="ulSecond">
+    <li>111</li>
+    <li>222</li>
+    <li>333</li>
+  </ul>
+</th:block>
+
 </html>
