--- a/ex3/src/main/resources/templates/sample/exTemplate.html
+++ b/ex3/src/main/resources/templates/sample/exTemplate.html
@@ -1,9 +1,11 @@
-<!--src/main/resources/templates/sample/exTemplate.html-->
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-  <th:block th:replace="~{layout/layout1 :: setContent(~{this :: content})}">
-    <th:block th:fragment="content">
-      <h1>exTempate Page1</h1>
-    </th:block>
+
+<th:block th:replace="~{/layout/layout1 :: setContent(~{this::content})}">
+  <th:block th:fragment="content">
+    <h1>exTemplate Page</h1>
   </th:block>
+
+</th:block>
+
 </html>
