--- a/ex6/src/main/resources/templates/movie/modify.html
+++ b/ex6/src/main/resources/templates/movie/modify.html
@@ -65,7 +65,9 @@
             th:data-name='${movieImageDTO.imgName}'
             style="cursor:pointer;">
           <div>
-            <button class="removeBtn" type="button">X</button>
+            <button type="button"
+                    th:onclick="deleteFileDb(this)">X
+            </button>
             <img
                 th:if="${movieImageDTO.path != null}"
                 th:src="|@{/display(fileName=${movieImageDTO.getThumbnailURL})}|">
@@ -110,6 +112,23 @@
         .then(json => {console.log(json);showResult(json);})
         .catch(err => console.log('Error: ', err))
       }
+      function deleteFileDb(btn) {
+        const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
+        const targetLi = btn.closest('li')
+        const fileName = targetLi.dataset.file;
+        const uuid = targetLi.dataset.uuid;
+        fetch(removeUrl+fileName+"&uuid="+uuid, {
+          method: 'POST', dataType: 'json', fileName: fileName
+        })
+        .then(response => response.json())
+        .then(json => {
+          console.log(json)
+          if(json === true) targetLi.remove()
+          document.querySelector("#custom-label").innerHTML = ''
+          document.querySelector("#fileInput").value = '';
+        })
+        .catch(err => console.log("Error occurred: ", err))
+      }
       function showResult(arr) {
         const uploadUL = document.querySelector(".uploadResult ul");
         let str = ""
@@ -128,7 +147,7 @@
             const removeUrl = /*[[@{/removeFile?fileName=}]]*/'removeUrl'
             const targetLi = this.closest('li')
             const fileName = targetLi.dataset.file;
-            /*fetch(removeUrl+fileName, {
+            fetch(removeUrl+fileName, {
               method: 'POST', dataType: 'json', fileName: fileName
             })
             .then(response => response.json())
@@ -139,17 +158,6 @@
               document.querySelector("#fileInput").value = '';
             })
             .catch(err => console.log("Error occurred: ", err))
-            */
-            axios({
-              method: "POST",
-              url: removeUrl+fileName,
-            }).then(res => {
-              if(res.data === true) targetLi.remove();
-              document.querySelector("#custom-label").innerHTML = '';
-              document.querySelector("#fileInput").value = '';
-            }).catch(err => {
-              console.log(err);
-            });
           }
         }
       }
@@ -172,11 +180,11 @@
           `
         }
         document.querySelector(".box").innerHTML = str;
-        if(fileInput.files.length == 0) {
+        /*if(fileInput.files.length == 0) {
           document.querySelector("#custom-label").innerHTML =
             "파일을 선택하세요!"
           fileInput.focus(); return false;
-        }
+        }*/
         frmSend.submit();
       }
       btnDele.onclick = e => {
