--- a/ex7/src/main/resources/templates/error/notFound.html
+++ b/ex7/src/main/resources/templates/error/notFound.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Not Found Resource</h1>
 <p th:text="${errorMessage}"></p>
-<P th:value="${server.test}"></P>
+<!--<P th:value="${server.test}"></P>-->
 </body>
 </html>
